<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".skins.SkinsChangerXActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="367dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/skin_x_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="#A6858585"
                android:text="@string/skin_x_0_description"
                app:drawableStartCompat="@drawable/ic_skins_x_0" />

            <TextView
                android:id="@+id/skin_x_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="#A6858585"
                android:text="@string/skin_x_1_description"
                app:drawableStartCompat="@drawable/ic_skins_1" />

            <TextView
                android:id="@+id/skin_x_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="#A6B80000"
                android:text="@string/skin_x_2_description"
                app:drawableStartCompat="@drawable/ic_skins_2" />

            <TextView
                android:id="@+id/skin_x_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="#A6B80000"
                android:text="@string/skin_x_3_description"
                app:drawableStartCompat="@drawable/ic_skins_3" />

            <TextView
                android:id="@+id/skin_x_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="#A6B80000"
                android:text="@string/skin_x_4_description"
                app:drawableStartCompat="@drawable/ic_skins_4" />

            <TextView
                android:id="@+id/skin_x_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="#A6B80000"
                android:text="@string/skin_x_5_description"
                app:drawableStartCompat="@drawable/ic_skins_5" />

            <TextView
                android:id="@+id/skin_x_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="#A6B80000"
                android:text="@string/skin_x_6_description"
                app:drawableStartCompat="@drawable/ic_skins_6" />

            <TextView
                android:id="@+id/skin_x_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="#A6B80000"
                android:text="@string/skin_x_7_description"
                app:drawableStartCompat="@drawable/ic_skins_7" />

            <TextView
                android:id="@+id/skin_x_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="#A6B80000"
                android:text="@string/skin_x_8_description"
                app:drawableStartCompat="@drawable/ic_skins_8" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>